--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </td>
 
                   <tr>
-                    <td>Photgraphy</td>
+                    <td>Photography</td>
                     <td>⭐⭐⭐⭐</td>
                   </tr>
             </table>
